# xl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen.cfg  xlConfig.cmake.in  zstring_view.h
benchmark/: CMakeLists.txt  README.md  aligned_string.cpp  benchmark.cpp  regex_benchmark.cpp  template.cpp  templates.cpp
docs/html/: CMakeFiles_23_89_84_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.html  CMakeFiles_23_89_84_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp_source.html  aligned__string_8cpp.html  aligned__string_8cpp__incl.map  aligned__string_8cpp__incl.md5  aligned__string_8cpp_a135d2d10a5ad5cbb0edf5f464b2241e3_cgraph.map  aligned__string_8cpp_a135d2d10a5ad5cbb0edf5f464b2241e3_cgraph.md5  aligned__string_8cpp_a135d2d10a5ad5cbb0edf5f464b2241e3_icgraph.map  aligned__string_8cpp_a135d2d10a5ad5cbb0edf5f464b2241e3_icgraph.md5  aligned__string_8cpp_a1910eda24fde0af834dffeaa3bf9e90e_cgraph.map  aligned__string_8cpp_a1910eda24fde0af834dffeaa3bf9e90e_cgraph.md5  aligned__string_8cpp_a1de5f32aeaf72c1ab9f0054a7625f21c_icgraph.map  aligned__string_8cpp_a1de5f32aeaf72c1ab9f0054a7625f21c_icgraph.md5  aligned__string_8cpp_a21f884f9884120bb720c12c0c4fd77ea_cgraph.map  aligned__string_8cpp_a21f884f9884120bb720c12c0c4fd77ea_cgraph.md5  aligned__string_8cpp_a23bbea0757fe441c3ce2f7ed546ce790_cgraph.map  aligned__string_8cpp_a23bbea0757fe441c3ce2f7ed546ce790_cgraph.md5  aligned__string_8cpp_a2ad41609a605b9659dea27aa7d970519_cgraph.map  aligned__string_8cpp_a2ad41609a605b9659dea27aa7d970519_cgraph.md5  aligned__string_8cpp_a4b63f904e39c357cc2e4b2c031416082_cgraph.map  aligned__string_8cpp_a4b63f904e39c357cc2e4b2c031416082_cgraph.md5  aligned__string_8cpp_a4c173b7b22d71cacca0813e8757a7e87_cgraph.map  aligned__string_8cpp_a4c173b7b22d71cacca0813e8757a7e87_cgraph.md5  aligned__string_8cpp_a9f8323ced6b8b824372561d979d0b944_cgraph.md5  aligned__string_8cpp_aab1e1f685586839a9427a441fba65b49_icgraph.map  aligned__string_8cpp_aab1e1f685586839a9427a441fba65b49_icgraph.md5  aligned__string_8cpp_aae39fa732ff07de1b39c9800dac9cc64_cgraph.map  aligned__string_8cpp_aae39fa732ff07de1b39c9800dac9cc64_cgraph.md5  aligned__string_8cpp_ac1885595f8e028809a020c0e24e2271c_cgraph.map  aligned__string_8cpp_ac1885595f8e028809a020c0e24e2271c_cgraph.md5  aligned__string_8cpp_ac6426bd3f9ae38a729563e9e5c6c8148_cgraph.map  aligned__string_8cpp_ac6426bd3f9ae38a729563e9e5c6c8148_cgraph.md5  aligned__string_8cpp_accbe3af1d5476a1ba664d85143ec4584_cgraph.map  aligned__string_8cpp_accbe3af1d5476a1ba664d85143ec4584_cgraph.md5  aligned__string_8cpp_ad8e56567493d7d543fb1339bea58908b_cgraph.map  aligned__string_8cpp_ad8e56567493d7d543fb1339bea58908b_cgraph.md5  aligned__string_8cpp_adeb741648982d33f6c0b0b8a36329a45_cgraph.map  aligned__string_8cpp_adeb741648982d33f6c0b0b8a36329a45_cgraph.md5  aligned__string_8cpp_af019da43a6957996df0d807114d0f596_cgraph.map  aligned__string_8cpp_af019da43a6957996df0d807114d0f596_cgraph.md5  (+869 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+85 more)
include/: library_extensions.h  log.h  regexer.h  template.h  zstring_view.h
include/aligned_string/: aligned_string.h  dynamic_buffer.h  static_buffer.h
include/template/: README.md  bound_template.h  bound_template.hpp  bound_template_impl.h  exceptions.h  provider.h  provider_data.h  template.h
include/xl/: aligned_string.h  cloneable_unique_pointer.h  date.h  deferred.h  demangle.h  destructive_move.h  exceptions.h  expected.h  json.h  library_extensions.h  log.h  magic_ptr.h  member_function_type_traits.h  not_null.h  pimpl.h  regexer.h  slab_allocator.h  templates.h  test-templates.h  zstring_view.h
include/xl/aligned_string/: README.md  aligned_string.h  dynamic_buffer.h  static_buffer.h
include/xl/log/: README.md  log.h  log_enum_bases.h  log_exception.h  log_status_file.h
include/xl/regex/: README.md  regex_pcre.h  regex_std.h  regexer.h
include/xl/template/: directory_loader.h  provider.h  provider_data.h  template.h
include/xl/templates/: README.md  compiled_template.h  directory_loader.h  exceptions.h  fill_state.h  provider.h  provider_data.h  provider_interface.h  substitution.h  substitution_impl.h  substitution_state.h  template.h  template_lexer.l  template_parser.y  templates.h
log_gui/: CMakeLists.txt  README.md  example.log_status  example2.log_status  logelementlistmodel.cpp  logelementlistmodel.h  logstatus.cpp  logstatus.h  logstatus.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  untitled.pro
test/: CMakeLists.txt  aligned_string.cpp  library_extensions.cpp  log.cpp  magic_ptr.cpp  regexer.cpp  template.cpp  templates.cpp  test-demangle.cpp  test-destructive-move.cpp  test-json.cpp  test-log.cpp  test-not_null.cpp  test-slab_allocator.cpp  test-templates.cpp  testing_environment.cpp  zstring_view.cpp
test/templates/: a.template  b.template
